# esphome-device-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: basic_test.rs
src/: api.proto  api.rs  lib.rs  metadata.rs  server.rs
src/embassy_net/: frame_reader.rs  server.rs
src/std/: frame_reader.rs  message_sender.rs  mod.rs  server.rs
